[gd_scene load_steps=12 format=2]

[ext_resource path="res://img/session.png" type="Texture" id=1]
[ext_resource path="res://fuentes/arial.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://script/Login.gd" type="Script" id=3]
[ext_resource path="res://img/btn_iniciarsesion2.png" type="Texture" id=4]
[ext_resource path="res://img/btn_iniciarsesion.png" type="Texture" id=5]
[ext_resource path="res://fuentes/arialbd.ttf" type="DynamicFontData" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="Theme" id=5]

[sub_resource type="DynamicFont" id=6]
size = 19
font_data = ExtResource( 6 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="correo" type="LineEdit" parent="."]
margin_left = 686.0
margin_top = 506.0
margin_right = 1321.0
margin_bottom = 575.0
theme = SubResource( 1 )
custom_colors/cursor_color = Color( 0.788235, 0.141176, 0.141176, 1 )
custom_colors/clear_button_color_pressed = Color( 1, 0.447059, 0.447059, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
clear_button_enabled = true

[node name="contra" type="LineEdit" parent="."]
margin_left = 694.0
margin_top = 708.0
margin_right = 1329.0
margin_bottom = 777.0
theme = SubResource( 1 )
custom_colors/cursor_color = Color( 0.788235, 0.141176, 0.141176, 1 )
custom_colors/clear_button_color_pressed = Color( 1, 0.447059, 0.447059, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
secret = true
clear_button_enabled = true

[node name="Button" type="Button" parent="."]
margin_left = 1095.0
margin_top = 932.0
margin_right = 1284.0
margin_bottom = 986.0
flat = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 873.0
margin_top = 825.0
margin_right = 1174.0
margin_bottom = 911.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0.352941 )
margin_left = 832.0
margin_top = 955.0
margin_right = 1221.0
margin_bottom = 1062.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "ninguno"
align = 1
valign = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
